[package]
name = "cargo-test-annotations"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/alexschrod/cargo-test-annotations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.0"
miette = { version = "5.1.0", features = ["fancy"] }
regex = "1.5.6"
thiserror = "1.0.31"
