[package]
name = "cargo-test-annotations"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/alexschrod/cargo-test-annotations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.19.1"
miette = { version = "7.4.0", features = ["fancy"] }
regex = "1.5.6"
thiserror = "2.0.9"
octocrab = "0.42.1"
reqwest = { version = "0.12.11", features = ["json"] }
serde = "~1.0"
serde_json = "~1.0"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
